syntax = "proto3";

import "google/protobuf/wrappers.proto";

package Common;

option csharp_namespace = "PeakyFlow.GrpcProtocol.Common";


message RespBase {
	ResultStatusMsg status = 1;
	repeated google.protobuf.StringValue errors = 2;
	repeated ValidationErrorMsg validationErrors = 3;
}

message ValidationErrorMsg {
    google.protobuf.StringValue identifier = 1;
    google.protobuf.StringValue errorMessage = 2;
    google.protobuf.StringValue errorCode = 3;
}

enum ResultStatusMsg {
    Ok = 0;
    Created = 1;
    Error = 2;
    Forbidden = 3;
    Unauthorized = 4;
    Invalid = 5;
    NotFound = 6;
    NoContent = 7;
    Conflict = 8;
    CriticalError = 9;
    Unavailable = 10;
}
